--- a/DUOLEditor/DUOLEditor.vcxproj.filters
+++ b/DUOLEditor/DUOLEditor.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClInclude Include="include\DUOLEditor\Util\ImGuiNavDebugDraw.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLEditor\Modules\MenuBar.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLEditor\Editor.cpp">
@@ -477,6 +480,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLEditor\Util\ImGuiNavDebugDraw.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLEditor\Modules\MenuBar.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
